create controller and template

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
   </head>
 
   <body>
+
+    <%= link_to 'new post', new_post_path %>
+    <%= link_to 'all posts', posts_path %>
+
     <%= yield %>
   </body>
 </html>
