--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,38 @@
 
   <body>
 
-    <%= link_to 'new post', new_post_path %>
-    <%= link_to 'all posts', posts_path %>
+     <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="<%= posts_path %>">All posts</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contacts</a>
+          </li>
+        </ul>
+        <%= link_to 'Create new post', new_post_path, class: 'btn btn-outline-primary pull-xs-right' %>
+      </div>
+    </div>
+  </nav>
 
-    <%= yield %>
+     <div class="container main">
+       <div class="col-md-12">
+         <div class="row">
+           <% flash.each do |name,message| %>
+            <div class="alert alert-<%= name %>">
+              <%= message %>
+            </div>
+           <% end %>
+         </div>
+       </div>
+        <%= yield %>
+     </div>
+
   </body>
 </html>
