--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,21 +1,33 @@
+<% if @post.errors.any? %>
+<div class="alert alert-danger">
+  <h5><%= t('common.errors') %></h5>
+  <ul>
+    <% @post.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+</div>
+<% end %>
+
 <%= form_for @post do |f| %>
-  <div class="form-control">
-    <%= f.label :title %>
-    <%= f.text_field :title %>
+  <div class="mb-3">
+    <%= f.label :title, class: 'form-label'  %>
+    <%= f.text_field :title, class: 'form-control' %>
   </div>
 
-  <div class="form-control">
-    <%= f.label :summary %>
-    <%= f.text_area :summary %>
+  <div class="mb-3">
+    <%= f.label :summary, class: 'form-label' %>
+    <%= f.text_area :summary, class: 'form-control' %>
   </div>
 
-  <div class="form-control">
-    <%= f.label :body %>
-    <%= f.text_area :body %>
+  <div class="mb-3">
+    <%= f.label :body, class: 'form-label' %>
+    <%= f.text_area :body, class: 'form-control' %>
   </div>
 
-  <div class="form-control">
-    <%= f.submit "Save post" %>
+  <div class="mb-3">
+    <%= f.submit "Save post", class: 'btn btn-primary' %>
+    <%= link_to 'Go back', :back, class: 'btn btn-outline-secondary' %>
 
   </div>
 <% end %>
