--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -9,7 +9,7 @@
 </div>
 <% end %>
 
-<%= form_for @post do |f| %>
+<%= form_for @post, html: {multipart: true} do |f| %>
   <div class="mb-3">
     <%= f.label :title, class: 'form-label'  %>
     <%= f.text_field :title, class: 'form-control' %>
@@ -23,6 +23,10 @@
   <div class="mb-3">
     <%= f.label :body, class: 'form-label' %>
     <%= f.text_area :body, class: 'form-control' %>
+  </div>
+
+  <div class="mb-3">
+    <%= f.file_field :image, class: 'form-control' %>
   </div>
 
   <div class="mb-3">
