--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -27,6 +27,11 @@
   </div>
 
   <div class="mb-3">
+    <%= f.label :all_tags, class: 'form-label' %>
+    <%= f.text_field :all_tags, class: 'form-control' %>
+  </div>
+
+  <div class="mb-3">
     <%= f.file_field :image, class: 'editor' %>
   </div>
 
