--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,13 @@
             <a class="nav-link" href="#">Contacts</a>
           </li>
         </ul>
+        <% if user_signed_in? %>
+        <%= current_user.email %>
+            <%= link_to 'Выйти', destroy_user_session_path, method: 'DELETE', class: 'btn btn-primary pull-xs-right' %>
+          <% else %>
+            <%= link_to 'Войти', new_user_session_path, class: 'btn btn-primary pull-xs-right' %>
+        <% end %>
+
         <%= link_to 'Create new post', new_post_path, class: 'btn btn-outline-primary pull-xs-right' %>
       </div>
     </div>
@@ -35,11 +42,20 @@
      <div class="container main">
        <div class="col-md-12">
          <div class="row">
-           <% flash.each do |name,message| %>
-            <div class="alert alert-<%= name %>">
-              <%= message %>
-            </div>
-           <% end %>
+     <p class="alert alert-info"><%= alert %></p>
+         </div>
+       </div>
+     </div>
+
+
+     <div class="container main">
+       <div class="col-md-12">
+         <div class="row">
+           <%# flash.each do |name,message| %>
+<!--            <div class="alert alert-<%#= name %>">-->
+              <%#= message %>
+<!--            </div>-->
+           <%# end %>
          </div>
        </div>
 
